--- a/.github/workflows/pypi_build_and_deploy.yaml
+++ b/.github/workflows/pypi_build_and_deploy.yaml
@@ -10,7 +10,11 @@ on:
 
 jobs:
   build_wheels:
-    name: Build wheels
+    name: Build wheels on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
 
     steps:
       - uses: actions/checkout@v3
