--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -22,8 +22,8 @@ jobs:
       
       - name: Build source and wheel distributions
         run: |
-          python -m pip install --upgrade build twine
-          python -m build
+          python -m pip install --upgrade pip setuptools wheel twine
+          python -m setup.py bdist_wheel
           twine check --strict dist/*
   
       - uses: pypa/gh-action-pypi-publish@release/v1
